# llm-search-kit

./: .env.example  .gitignore  GETTING_STARTED.md  HANDOVER.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: ADDING_SKILLS.md  INTEGRATION.md  INTEGRATION_BEASY.md  REPORT_CARD.md
llm_search_kit/: __init__.py  config.py
llm_search_kit/agent/: __init__.py  base_skill.py  decorator.py  engine.py  hooks.py  registry.py
llm_search_kit/examples/: __init__.py  beasy_service.py
llm_search_kit/examples/amazon_products/: __init__.py  catalog.py  run.py  schema.py  soul.md
llm_search_kit/examples/beasyapp_backend/: __init__.py  catalog.py  categories_skill.py  run.py  schema.py  smoke.py  soul.md
llm_search_kit/examples/elasticsearch_catalog/: __init__.py  catalog.py  run.py
llm_search_kit/examples/flask_server/: __init__.py  app.py  run.py
llm_search_kit/llm/: __init__.py  base.py  openai_compat.py  resilient.py
llm_search_kit/search/: __init__.py  backend.py  relaxation.py  schema.py  search_skill.py
reports/: leaderboard.md
scripts/: run_scenarios.py
tests/: conftest.py  test_beasy_service.py  test_beasyapp_backend.py  test_beasyapp_live.py  test_categories_skill.py  test_config.py  test_elasticsearch_catalog.py  test_engine_loop.py  test_flask_server.py  test_hooks.py  test_llm_live.py  test_openai_compat.py  test_parallel_tool_calls.py  test_registry_discovery.py  test_relaxation.py  test_search_relaxation_runaway.py  test_search_skill.py  test_skill_decorator.py  test_starter_template.py
(+9 files in other folders)
